# HomeTask

./: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  FlyingCat.cpp  FlyingCat.h  Libraries.h  main.cpp
